force-app/main/default/objects/ArdiraSurvey__Question_Result_Choice__c/ArdiraSurvey__Question_Result_Choice__c.object-meta.xml
<CustomObject>
    <description>This object connects the choices selected for a question.</description>
    <label>Ardira Question Result Choice</label>
    <nameField>
        <displayFormat>{YYYY}-{000000000}</displayFormat>
        <label>Question Result Choice ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ardira Question Result Choices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>