force-app/main/default/objects/ArdiraSurvey__Question_Result_Choice__c/fields/ArdiraSurvey__Ans_Choice__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Ans_Choice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Selected answer choice for a question response.</description>
    <inlineHelpText>Selected answer choice for a question response.</inlineHelpText>
    <label>Answer Choice</label>
    <referenceTo>ArdiraSurvey__Answer_Choice__c</referenceTo>
    <relationshipLabel>Question Result Choices</relationshipLabel>
    <relationshipName>Question_Result_Choices2</relationshipName>
    <type>Lookup</type>
</CustomField>