force-app/main/default/objects/ArdiraSurvey__Question_Result_Choice__c/fields/ArdiraSurvey__Question_Result__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Question_Result__c</fullName>
    <description>Question result related to choice.</description>
    <inlineHelpText>Question result related to choice.</inlineHelpText>
    <label>Question Result</label>
    <referenceTo>ArdiraSurvey__Question_Result__c</referenceTo>
    <relationshipLabel>Question Result Choices</relationshipLabel>
    <relationshipName>Question_Result_Choices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>