force-app/main/default/objects/ArdiraSurvey__Question_Result_Choice__c/fields/ArdiraSurvey__Selected_Order__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Selected_Order__c</fullName>
    <description>Selected order of the choice for ranking questions.</description>
    <inlineHelpText>Selected order of the answer choice for ranking questions.</inlineHelpText>
    <label>Selected Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>