force-app/main/default/objects/ArdiraSurvey__Question_Result_Choice__c/fields/ArdiraSurvey__Selected_Order_Text__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Selected_Order_Text__c</fullName>
    <description>Selected order of the choice for ranking questions.</description>
    <inlineHelpText>Selected order of the choice for ranking questions.</inlineHelpText>
    <label>Selected Order Text</label>
    <length>5</length>
    <type>Text</type>
</CustomField>